--- a/assets/less/base_modules/table.less
+++ b/assets/less/base_modules/table.less
@@ -5,8 +5,8 @@
 // VARS
 // ----------------------------------------------------
 
-@LOCAL-TableBorderColor:            @COLOR-Grey-Lighter;
-@LOCAL-TableHeaderTextColor:        @COLOR-Grey-Dark;
+@LOCAL-TableBorderColor:            @COLOR-GreyLighter;
+@LOCAL-TableHeaderTextColor:        @COLOR-GreyDark;
 @LOCAL-TableHeaderBackgroundColor:  @COLOR-White;
 @LOCAL-TableHeaderFontFamily:       @TYPE-HeadingsFontFamily;
 
