--- a/assets/less/modules/article.less
+++ b/assets/less/modules/article.less
@@ -10,7 +10,11 @@
 
 .article__head {}
 
-.article__title {}
+.article__title {
+	margin-bottom: 0;
+}
+
+.article__subtitle {}
 
 .article__body {}
 
