--- a/assets/less/modules/links.less
+++ b/assets/less/modules/links.less
@@ -36,26 +36,24 @@
 		color: @COLOR-White;
 	}
 	&:visited {
-		color: @COLOR-Blue-Lighter;
+		color: @COLOR-BlueLighter;
 	}
 	&:hover {
-		color: @COLOR-Blue-Light;
+		color: @COLOR-BlueLight;
 		text-decoration: none;
 	}
 	&:focus {
-		color: @COLOR-Blue-Light;
+		color: @COLOR-BlueLight;
 		text-decoration: none;
 	}
 	&:active {
-		color: @COLOR-Blue-Light;
+		color: @COLOR-BlueLight;
 	}
 }
 
 a {
 	._link();
 }
-
-
 
 // MOBILE
 // ----------------------------------------------------
