--- a/content/_layouts/default.hbs
+++ b/content/_layouts/default.hbs
@@ -43,13 +43,10 @@
     <![endif]-->
 
     {{> header }}
-
     {{> navigation }}
-
     {{> body }}
-
     {{> footer }}
-
+    {{> copyright }}
     {{> scripts }}
 
     <!-- <div class="modal__mask modal__mask--visible"></div> -->
