--- a/content/index.hbs
+++ b/content/index.hbs
@@ -8,8 +8,10 @@ title: Index
 
 			<div class="page page--sitemap">
 				<div class="page__head">
-					<h1 class="page__title">Pages</h1>
+					<h1 class="page__title">Page Title</h1>
+					<h2 class="page__subtitle">Page Subtitle</h2>
 				</div>
+
 				<div class="page__body">
 					<ul class="list">
 					{{#withSort pages}}
