--- a/assets/less/base_modules/panel.less
+++ b/assets/less/base_modules/panel.less
@@ -8,22 +8,25 @@
 .panel {
 	background-clip: padding-box;
 	background-color: @COLOR-Base;
-	._margin(10,0,20,0);
-	._padding(20);
-	._border-radius(2);
+	._margin (10, 0, 20, 0);
+	._padding (20);
+	._border-radius (2);
 	._box-shadow-custom(~"0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12)");
 }
 
 .panel__title {
-	._font-size-heading(@TYPE-SIZE-Beta);
+	font-family: @TYPE-HeadingsFontFamily;
+	._font-size-heading (@TYPE-SIZE-Beta);
 }
 
-.panel__body {}
+.panel__body {
+	
+}
 
 .panel__actions {
 	border-top: 1px solid lighten(@COLOR-Base, 5);
-	._margin-top(15);
-	._padding-top(20);
+	._margin-top (15);
+	._padding-top (20);
 }
 
 } .panel-styles();
