Added icon font

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -10,6 +10,7 @@
 // BASE MODULES
 // ----------------------------------------------------
 
+@import "base_modules/icon.less";
 @import "base_modules/accordion.less";
 @import "base_modules/button.less";
 @import "base_modules/card.less";
