--- a/assets/less/base_modules/icon.less
+++ b/assets/less/base_modules/icon.less
@@ -17,13 +17,17 @@
     font-weight: normal;
     font-style: normal;
 }
+
 [class^="icon--"]:before, [class*=" icon--"]:before,
 [class^="icon--"]:after, [class*=" icon--"]:after {
     font-family: Flaticon;
-        font-size: 20px;
-font-style: normal;
-margin-left: 20px;
-}.icon--account4:before {
+    font-style: normal;
+    vertical-align: middle;
+    line-height: 1;
+    ._font-size (20);
+}
+
+.icon--account4:before {
     content: "\e000";
 }
 .icon--add179:before {
