--- a/assets/less/base/typography.less
+++ b/assets/less/base/typography.less
@@ -91,14 +91,14 @@ hr {
 }
 
 ins {
-    background: #FF9;
-    color: #000;
+    color: @COLOR-Black;
+    background: @COLOR-Yellow;
     text-decoration: none;
 }
 
 mark {
-    background: #FF0;
-    color: #000;
+    color: @COLOR-Black;
+    background: @COLOR-Yellow;
     font-style: italic;
     font-weight: bold;
 }
@@ -122,7 +122,7 @@ pre {
 }
 
 code {
-    ._padding(0, @TYPE-FontSize, 0, @TYPE-FontSize);
+    ._padding (0, @TYPE-FontSize, 0, @TYPE-FontSize);
 
     //._border-radius (3);
 }
