--- a/content/Systems/typography.hbs
+++ b/content/Systems/typography.hbs
@@ -14,11 +14,10 @@ nav-variant: "typography"
 		    <article class="article">
 			    <header class="article__head head">
 			        <h1 class="article__title">{{title}}</h1>
+			        <h2 class="article__subtitle">Article Subtitle</h2>
 		        </header>
 		        <div class="article__body rte">
-		        	<p></p>
-
-		        	<h2>Assumptions &amp; Setup</h2>
+		        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum ut nibh vel ipsum lacinia rutrum. Aenean maximus nibh vitae est cursus dignissim. Nunc at finibus erat. Aenean sollicitudin neque risus, at sollicitudin est accumsan ac. Donec ultrices fermentum euismod. Suspendisse eu suscipit ex. Quisque sit amet augue efficitur, lobortis justo a, auctor magna.</p>
 		        </div>
 
 		        <section class="section">
@@ -148,7 +147,9 @@ nav-variant: "typography"
 
 		        </section>
 
-		        <footer class="article__foot"></footer>
+		        <footer class="article__foot">
+		        	
+		        </footer>
 
 	        </article>
 	    </div>
