--- a/assets/less/base/print.less
+++ b/assets/less/base/print.less
@@ -8,24 +8,24 @@
 
 @media print {
 
-    * { 
-        background: transparent !important; 
-        color: #000 !important; 
-        box-shadow:none !important; 
-        text-shadow: none !important; 
+    * {
+        background: transparent !important;
+        color: @COLOR-Black !important;
+        box-shadow:none !important;
+        text-shadow: none !important;
     }
 
     a, 
-    a:visited { 
-        text-decoration: underline; 
+    a:visited {
+        text-decoration: underline;
     }
 
-    a[href]:after { 
-        content: " (" attr(href) ")"; 
+    a[href]:after {
+        content: " (" attr(href) ")";
     }
 
-    abbr[title]:after { 
-        content: " (" attr(title) ")"; 
+    abbr[title]:after {
+        content: " (" attr(title) ")";
     }
 
     .ir a:after, 
@@ -36,7 +36,7 @@
 
     pre, 
     blockquote { 
-        border: 1px solid #999; 
+        border: 1px solid @COLOR-GreyLight;
         page-break-inside: avoid; 
     }
 
