--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -19,21 +19,23 @@
 @import "base_modules/table.less";
 @import "base_modules/story.less";
 @import "base_modules/rte.less";
+@import "base_modules/alert.less";
 
 // MODULES
 // ----------------------------------------------------
 
-@import "modules/wraps.less";
+@import "modules/article.less";
 @import "modules/links.less";
 @import "modules/list.less";
 @import "modules/list__navigation.less";
-@import "modules/article.less";
 @import "modules/page.less";
-@import "modules/ie.less";
+@import "modules/section.less";
+@import "modules/wraps.less";
 
 // HELPERS/PRINT
 // ----------------------------------------------------
 
+@import "modules/ie.less";
 @import "base/helpers.less";
 @import "base/print.less";
 
