--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -107,9 +107,9 @@
 @TYPE-FontSize:                 14;
 @TYPE-LineHeight:               24;
 @TYPE-FontFamily:               'Open Sans', Arial, Helvetica, sans-serif;
-@TYPE-FontColor:                @COLOR-GreyDark;
+@TYPE-FontColor:                @COLOR-GreyDarker;
 @TYPE-HeadingsFontFamily:       'Playfair Display', serif;
-@TYPE-HeadingsColor:            @COLOR-GreyDark;
+@TYPE-HeadingsColor:            @COLOR-GreyDarker;
 
 @TYPE-SIZE-Omega:               60;
 @TYPE-SIZE-Alpha:               40;
