Changes to copyright

--- a/content/_partials/copyright.hbs
+++ b/content/_partials/copyright.hbs
@@ -1,7 +1,7 @@
 <div class="w w--copyright">
     <div class="g">
         <div class="c__md--1">
-            <div class="copyright" role="contentinfo">&copy; Copyright {{ year }} <a href="http://www.munchkinworld.net/" title="" target="_blank">Gary Finbow</a>, All rights reserved.</div>
+            <div class="copyright" role="contentinfo">&copy; Copyright {{ year }} ALLOY, <a href="http://www.munchkinworld.net/" title="" target="_blank">Gary Finbow</a>, All rights reserved.</div>
         </div>
     </div>
 </div>
