--- a/content/Systems/tables.hbs
+++ b/content/Systems/tables.hbs
@@ -37,40 +37,40 @@ nav-variant: "tables"
 		        	</thead>
 		        	<tbody class="table_body">
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Teimurazi Fabó Lane</td>
-				        	<td scope="col" class="table__cell">04/06/1965</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Teimurazi Fabó Lane</td>
+				        	<td class="table__cell">04/06/1965</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Visvaldis Adriaansen</td>
-				        	<td scope="col" class="table__cell">04/01/1995</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Visvaldis Adriaansen</td>
+				        	<td class="table__cell">04/01/1995</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Jamshid Markey</td>
-				        	<td scope="col" class="table__cell">11/12/2001</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Jamshid Markey</td>
+				        	<td class="table__cell">11/12/2001</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Oliviero Stojan</td>
-				        	<td scope="col" class="table__cell">09/04/1984</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Oliviero Stojan</td>
+				        	<td class="table__cell">09/04/1984</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Juhan Simba</td>
-				        	<td scope="col" class="table__cell">26/08/1935</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Juhan Simba</td>
+				        	<td class="table__cell">26/08/1935</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td scope="col" class="table__cell">00001</td>
-				        	<td scope="col" class="table__cell">Mac Ruaidhrí</td>
-				        	<td scope="col" class="table__cell">14/01/1978</td>
-				        	<td scope="col" class="table__cell"><a href="#edit">Edit</a></td>
+				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">Mac Ruaidhrí</td>
+				        	<td class="table__cell">14/01/1978</td>
+				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 		        	</tbody>
 		        </table>
