Small changes to HTML structure

--- a/content/404.hbs
+++ b/content/404.hbs
@@ -11,7 +11,7 @@ nav-variant: "error"
 	<div class="g">
 	    <div class="c__md--1">
 
-			<div class="page page--sitemap">
+			<div class="page page--{{nav-variant}}">
 				<div class="page__head">
 		        	<h1>Page Not Found</h1>
 		        </div>
