--- a/content/Systems/tables.hbs
+++ b/content/Systems/tables.hbs
@@ -18,9 +18,8 @@ nav-variant: "tables"
 <!-- writings -->
 		        <div class="article__body rte">
 
-
 		        <table class="table">
-		        	<caption></caption>
+		        	<caption class="table__caption"></caption>
 			        <colgroup>
 			        	<col />
 			        	<col />
@@ -43,31 +42,31 @@ nav-variant: "tables"
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">00002</td>
 				        	<td class="table__cell">Visvaldis Adriaansen</td>
 				        	<td class="table__cell">04/01/1995</td>
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">00004</td>
 				        	<td class="table__cell">Jamshid Markey</td>
 				        	<td class="table__cell">11/12/2001</td>
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">00007</td>
 				        	<td class="table__cell">Oliviero Stojan</td>
 				        	<td class="table__cell">09/04/1984</td>
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">00003</td>
 				        	<td class="table__cell">Juhan Simba</td>
 				        	<td class="table__cell">26/08/1935</td>
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
 			        	</tr>
 			        	<tr class="table__row">
-				        	<td class="table__cell">00001</td>
+				        	<td class="table__cell">00018</td>
 				        	<td class="table__cell">Mac Ruaidhrí</td>
 				        	<td class="table__cell">14/01/1978</td>
 				        	<td class="table__cell"><a href="#edit">Edit</a></td>
