--- a/content/_partials/article.hbs
+++ b/content/_partials/article.hbs
@@ -3,7 +3,7 @@
 		<header class="article__head">
 			<h1 class="article__title">{{{content.title}}}</h1>
 			{{#if "sub-title"}}
-				<h2 class="article__subtitle">{{{content.subtitle}}}</h2>
+				<p class="article__subtitle">{{{content.subtitle}}}</p>
 			{{/if}}
 		</header>
 		{{#if content.image}}
